# durak

./: .gitignore  BEST_PRACTICES.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MANIFEST.in  Makefile  PLAN.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  test_normalizer_standalone.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  tests.yml
audio_viz/: .gitignore  Cargo.toml  EXAMPLES.md  README.md  TECHNICAL_SUMMARY.md
audio_viz/shaders/: music_viz.wgsl
audio_viz/src/: audio_analyzer.rs  audio_input.rs  main.rs  renderer.rs
benchmarks/: README.md  benchmark_rust_vs_python.py
data/stopwords/: metadata.json
data/stopwords/base/: turkish.txt
data/stopwords/domains/: social_media.txt
docs/: ARCHITECTURE.md  AUDIO_VISUALIZATION.md  BACKENDS.md  BEST_PRACTICES.md  PROPERTY_TESTING.md  REPRODUCIBILITY.md  ROADMAP.md  RULE_OWNERSHIP.md  TOKENIZATION.md  overview.md
docs/design/: cleaning.md  stopwords.md  tokenizer.md
examples/: advanced_pipeline.py  basic_usage.py  lemmatizer_metrics.py  vowel_harmony_demo.py
python/durak/: __init__.py  _durak_core.pyi  cleaning.py  cli.py  context.py  control.py  exceptions.py  info.py  lemmatizer.py  normalizer.py  pipeline.py  resources_provider.py  stages.py  stopwords.py  suffixes.py  tokenizer.py
python/durak/core/: __init__.py  interfaces.py  types.py
resources/: CHANGELOG.md  README.md  metadata.json
resources/tr/config/: apostrophes.txt  lemma_suffixes.txt
resources/tr/lemmas/: README.md  turkish_lemma_dict.txt
resources/tr/stopwords/base/: turkish.txt
scripts/: generate_resource_metadata.py
src/: lib.rs  morphotactics.rs  root_validator.rs  suffix_inventory.rs  vowel_harmony.rs
src/durak/: __init__.py  cleaning.py  lemmatizer.py  normalizer.py  pipeline.py  stopwords.py  suffixes.py  tokenizer.py
src/durak/data/labels/: DETACHED_SUFFIXES.txt
src/durak/data/stopwords/base/: turkish.txt
src/scripts/: quickhead.sh
tests/: __init__.py  strategies.py  test_cleaning.py  test_cli.py  test_context.py  test_control.py  test_exceptions.py  test_lemmatizer.py  test_lemmatizer_metrics.py  test_normalizer.py  test_normalizer_integration.py  test_package.py  test_pipeline.py  test_pipeline_e2e_analysis.py  test_pipeline_e2e_canonical_gold.py  test_properties.py  test_regression_golden.py  test_resource_versioning.py  test_resources_provider.py  test_stopwords.py  test_story.py  test_suffixes.py  test_tokenizer.py  test_tokenizer_offsets.py  test_tokenizer_parity.py  test_vowel_harmony.py
tests/data/: __init__.py  corpus_validator.py  e2e_pipeline_canonical_gold.json  e2e_pipeline_corpus_cases.json  extra_stopwords.txt  golden_regression_cases.json  keep_words.txt  sample_sentences.txt  sample_story.txt
