[package]
name = "_durak_core"
version = "0.4.0"
edition = "2021"

[lib]
name = "_durak_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
regex = "1.10"

[profile.release]
# Enable Link-Time Optimization for cross-module inlining
# Trades longer compile time for faster runtime
lto = true

# Single codegen unit allows more aggressive optimization
# Default is 16 (parallelizes compilation but limits optimization)
codegen-units = 1

# Maximum optimization level (default is 3, but explicit is good)
opt-level = 3

# Strip debug symbols from release binary
# Reduces binary size by 2-3x with zero runtime cost
strip = true

# Abort on panic instead of unwinding
# Slightly faster, smaller binary (NLP workloads rarely recover from panics)
panic = "abort"
