[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "durak-nlp"
version = "0.2.2"
description = "Durak: modular Turkish NLP preprocessing toolkit."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Fatih Burak Karagöz" }]
license = "LicenseRef-Durak-1.2"
license-files = ["LICENSE"]
keywords = ["turkish nlp", "text processing", "preprocessing", "lemmatization", "tokenization"]
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: Turkish",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://karagoz.io"
Repository = "https://github.com/fbkaragoz/durak"
Issues = "https://github.com/fbkaragoz/durak/issues"
Documentation = "https://github.com/fbkaragoz/durak#readme"
Changelog = "https://github.com/fbkaragoz/durak/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
durak = ["py.typed", "data/stopwords/**/*.txt", "data/stopwords/**/*.json"]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.3.0",
    "pytest>=8.0.0",
    "coverage[toml]>=7.0.0",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"
lint.select = ["E", "F", "I", "N", "C4", "UP", "B", "A"]
lint.ignore = ["B905"]  # allow zip without strict length checks

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["durak"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
skip_empty = true

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_optional = true
show_error_codes = true
ignore_missing_imports = true
# SPDX-FileCopyrightText: © 2025 Fatih Burak Karagöz
# SPDX-License-Identifier: LicenseRef-Durak-NonCommercial-1.2