[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "durak-nlp"
version = "0.4.0"
description = "Durak: modular Turkish NLP preprocessing toolkit."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Fatih Burak Karagöz", email = "dev@karagoz.io" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["turkish nlp", "text processing", "preprocessing", "lemmatization", "tokenization"]
dependencies = ["click>=8.0.0"]

[project.scripts]
durak = "durak.cli:main"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: Turkish",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://karagoz.io"
Repository = "https://github.com/fbkaragoz/durak"
Issues = "https://github.com/fbkaragoz/durak/issues"
Documentation = "https://github.com/fbkaragoz/durak#readme"
Changelog = "https://github.com/fbkaragoz/durak/blob/main/CHANGELOG.md"

[tool.maturin]
python-source = "python"
module-name = "durak._durak_core"

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.3.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "coverage[toml]>=7.0.0",
    "mypy>=1.0.0",
    "hypothesis>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"
lint.select = ["E", "F", "I", "N", "C4", "UP", "B", "A"]
lint.ignore = ["B905"]  # allow zip without strict length checks

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = "python"

[tool.coverage.run]
branch = true
source = ["durak"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
skip_empty = true

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_optional = true
show_error_codes = true
ignore_missing_imports = true
# SPDX-FileCopyrightText: © 2025 Fatih Burak Karagöz
# SPDX-License-Identifier: LicenseRef-Durak-NonCommercial-1.2
